--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "bootstrap": "^4.6.0",
     "formik": "^2.2.9",
+    "i18next": "^22.0.2",
+    "i18next-browser-languagedetector": "^7.0.0",
+    "i18next-http-backend": "^2.0.0",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.0.0",
     "sass": "^1.55.0",
     "yup": "^0.32.11"
   },
