--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "bootstrap": "^4.6.0",
+    "cookie": "^0.5.0",
+    "cookies-next": "^2.1.1",
     "formik": "^2.2.9",
     "i18next": "^22.0.2",
     "i18next-browser-languagedetector": "^7.0.0",
