--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.13",
+    "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.1.3",
     "bootstrap": "^4.6.0",
     "cookie": "^0.5.0",
@@ -19,10 +21,13 @@
     "i18next-http-backend": "^2.0.0",
     "next": "13.0.0",
     "react": "18.2.0",
-    "react-bootstrap": "^2.5.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.0.0",
+    "react-redux": "^8.0.5",
+    "react-toastify": "^9.1.1",
     "sass": "^1.55.0",
+    "swr": "^1.3.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
