--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react-dom": "18.2.0",
     "react-i18next": "^12.0.0",
     "react-redux": "^8.0.5",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
     "sass": "^1.55.0",
+    "swiper": "^8.4.5",
     "swr": "^1.3.0",
     "yup": "^0.32.11"
   },
