--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap": "^2.6.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.0.0",
+    "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
